--- a/Final Documentation/Appendix/References.tex
+++ b/Final Documentation/Appendix/References.tex
@@ -8,8 +8,13 @@
 	
 	\bibitem{benchmark-BX} R. Oppermann and P. Robrecht, {\em Benchmarks for Bidirectional Transformations.} Seminar Maintaining Consistency in Model-Driven Engineering: Challenges and Techniques, University of Paderborn: Summer Term 2016.
 	
+	\bibitem{benchmarx} A. Anjorin, A. Cunha, H. Giese, F. Hermann, A. Rensink, and A. Sch\"urr, {\em Benchmarx}. In K. S. Candan, S. Amer-Yahia, N. Schweikardt, V. Christophides, and V. Leroy, editors, Proceedings of the Workshops of the EDBT/ICDT 2014 Joint Conference (EDBT/ICDT 2014), CEUR Workshop Proceedings, pages 82-86. CEUR-WS.org, 2014.
+		
+	\bibitem{benchmarx-reload} A. Anjorin, Z. Diskin, F. Jouault, Hsiang-Shang Ko, E. Leblebici, and B. Westfechtel, {\em Benchmarx Reloaded: A Practical Benchmark Framework for Bidirectional Transformations}. In R. Eramo, M. Johnson (eds.): Proceedings of the Sixth International Workshop on Bidirectional Transformations (Bx 2017),
+	Uppsala, Sweden, April 29, 2017, published at http://ceur-ws.org.
+	
 	\bibitem{tgg} A. Sch\"urr. {\em Specification of graph translators with triple graph grammars.} In E. W. Mayr, G. Schmidt, and G. Tinhofer, editors, {\em Graph-Theoretic
-		Concepts in Computer Science, 20th International Workshop, WG 94}, volume 903 of LNCS, pages 151-163, Herrsching, Germany, June 1994.
+	Concepts in Computer Science, 20th International Workshop, WG 94}, volume 903 of LNCS, pages 151-163, Herrsching, Germany, June 1994.
 	
 	\bibitem{bx-tgg} A. Bucaioni and R. Eramo, {\em Understanding bidirectional transformations with TGGs and JTL}, in Proc. of the Second Workshop on Bidirectional Transformations (BX 2013), no. 57, 2013.
 	
