--- a/Final Documentation/Implementation/Implementation.tex
+++ b/Final Documentation/Implementation/Implementation.tex
@@ -16,6 +16,8 @@ On the top, \texttt{View} (Web Browser) component is present which contains a gr
 
 \subsection{Core Details}\label{subsec:coredetails}
 
+\subsection{Challenges}\label{subsec:implchallenges}
+Bx tool - implementing atomic deltas to track successful/failed changes translation, user interaction 
  
 
 
