--- a/Final Documentation/Requirements/Requirements.tex
+++ b/Final Documentation/Requirements/Requirements.tex
@@ -3,23 +3,23 @@ This chapter explains all the requirements needed to implement a successful demo
 
 \subsection{Functional}\label{subsec:functionalreq}
 \paragraph{Learning Goals}
-Along with exploring the challenges as described in Section \ref{subsec:objectives}, I am also focussing on teaching some basic concepts to the user about bx in the process of trying/playing with the demonstrator.
+Along with exploring the challenges as described in Section \ref{subsec:objectives}, I am also focussing on teaching some basic concepts(functional requirements, referred to as \textbf{FREQ} from now on) to the user about bx in the process of trying/playing with the demonstrator.
 
 What am I trying to teach?
 \begin{itemize} 
-	\item {Bidirectional is not always bijective.} 
-	\item {Not all changes can be propagated. In this case, consistency needs to be preserved.}
-	\item {In BX, Challenge is to avoid or minimise information loss.}
-	\item {Current limitation - you can only change one side.}
-	\item {Synchronisation is interactive (to handle non-determinism).}	
+	\item {\textbf{\textit{FREQ1}} -- Bidirectional is not always bijective.} 
+	\item {\textbf{\textit{FREQ2}} -- Not all changes can be propagated. In this case, consistency needs to be preserved.}
+	\item {\textbf{\textit{FREQ3}} -- In BX, Challenge is to avoid or minimise information loss.}
+	\item {\textbf{\textit{FREQ4}} -- Current limitation - you can only change one side.}
+	\item {\textbf{\textit{FREQ5}} -- Synchronisation is interactive (to handle non-determinism).}	
 \end{itemize}
 \subsection{Non-Functional}\label{subsec:nonfunctionalreq}
-As my thesis is more focussed on the implementation of a demonstrator for consistency management based on a bx tool, following are some of the non-functional the end results I am trying to achieve:
+As my thesis is more focussed on the implementation of a demonstrator for consistency management based on a bx tool, following are some of the non-functional end results (referred to as \textbf{NREQ} from now on) I am trying to achieve:
 \begin{itemize} 
-	\item {Reduce the installation time of the bx tool by making the demonstrator available online. Hence, the user is just a click away to try the bx tool and needs nothing to install on his/her machine.} 
-	\item {Demonstartor should be interactive and fun to play with.}
-	\item {Demonstrator's example should not be too technical and rather be simple to attract more users. Also, user should be able to relate to the bx concepts through the example.}
-	\item {Demonstrator should be able to guide the user in the whole playing/learning process.}
+	\item {\textbf{\textit{NREQ1}} -- Reduce the installation time of the bx tool by making the demonstrator available online. Hence, the user is just a click away to try the bx tool and needs nothing to install on his/her machine.} 
+	\item {\textbf{\textit{NREQ2}} -- Demonstartor should be interactive and fun to play with.}
+	\item {\textbf{\textit{NREQ3}} -- Demonstrator's example should not be too technical and rather be simple to attract more users. Also, user should be able to relate to the bx concepts through the example.}
+	\item {\textbf{\textit{NREQ4}} -- Demonstrator should be able to guide the user in the whole playing/learning process.}
 \end{itemize}
 \subsection{Technical}\label{subsec:technicalreq}
 
