--- a/Final Documentation/Summary/Summary.tex
+++ b/Final Documentation/Summary/Summary.tex
@@ -1,6 +1,10 @@
 \section{Summary and Future Work}\label{sec:timeplan}
 \subsection{Conclusion}\label{subsec:conclusion}
+Finding the limitations of the tool, benchmarx.
 \subsection{Future Work}\label{subsec:futurework}
+1. Another tool
+2. Another example
+3. Tool as a webservice
 
 
 
